<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.pousse-cafe-framework</groupId>
  <artifactId>pousse-cafe</artifactId>
  <version>0.7.0-SNAPSHOT</version>

  <name>Pousse-Café - Parent</name>
  <description>Pousse-Café is a framework assisting in writing DDD-based applications</description>
  <url>http://www.pousse-cafe-framework.org</url>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Gérard Dethier</name>
      <email>g.dethier@gmail.com</email>
      <organization>Gérard Dethier</organization>
      <organizationUrl>http://www.gerarddethier.be</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/pousse-cafe/pousse-cafe.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/pousse-cafe/pousse-cafe.git</developerConnection>
    <url>http://github.com/pousse-cafe/pousse-cafe/tree/master</url>
  </scm>

  <packaging>pom</packaging>

  <properties>
    <maven.deploy.plugin.version></maven.deploy.plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <license.licenseName>apache_v2</license.licenseName>
    <license.organizationName>Pousse-Café</license.organizationName>
    <license.inceptionYear>2017</license.inceptionYear>

    <slf4j.version>1.7.26</slf4j.version>
    <junit.version>4.12</junit.version>
    <mockito.version>2.25.1</mockito.version>
    <hamcrest.version>2.1</hamcrest.version>
    <commons.lang.version>3.8.1</commons.lang.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>1.12</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <processDependencyManagement>false</processDependencyManagement>
          <rulesUri>http://www.pousse-cafe-framework.org/maven-versions-rules.xml</rulesUri>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-scm-plugin</artifactId>
        <version>1.9.5</version>
        <configuration>
          <connectionType>developerConnection</connectionType>
          <tag>v${project.version}</tag>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
          <argLine>--illegal-access=permit</argLine>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>pousse-cafe-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <phase>verify</phase>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.10.4</version>
            <executions>
              <execution>
                <id>attach-javadoc</id>
                <phase>verify</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
        <id>ossrh</id>
        <name>Sonatype repository</name>
        <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <modules>
    <module>pousse-cafe-core</module>
    <module>pousse-cafe-test</module>
    <module>pousse-cafe-doc</module>
    <module>pousse-cafe-journal</module>
    <module>pousse-cafe-spring</module>
    <module>pousse-cafe-spring-mongo</module>
    <module>pousse-cafe-journal-spring-mongo</module>
    <module>pousse-cafe-sample-bounded-context</module>
    <module>pousse-cafe-shop</module>
    <module>pousse-cafe-shop-app</module>
    <module>pousse-cafe-maven-plugin</module>
    <module>pousse-cafe-spring-kafka</module>
    <module>pousse-cafe-jackson</module>
    <module>pousse-cafe-attribute</module>
    <module>pousse-cafe-base</module>
    <module>pousse-cafe-injector</module>
    <module>pousse-cafe-pulsar</module>
    <module>pousse-cafe-spring-pulsar</module>
  </modules>
</project>
